--- a/Working_with_Spreadsheets.ipynb
+++ b/Working_with_Spreadsheets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN24MOIARrMwQjheJ9vIfIi",
+      "authorship_tag": "ABX9TyMcpgdYUJeNudXwrbmqWat+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1159,6 +1159,126 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "uEWn5wDBku4F"
+      },
+      "source": [
+        "**Find Column Names that Contain a Specific Keyword**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j1gx2OIEkw9p"
+      },
+      "source": [
+        "quiz_columns = [column for column in students_sheet1.columns if \"Quiz\" in column]"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        },
+        "id": "D1-o_xoOkwws",
+        "outputId": "3da611f2-7c36-49a8-859d-89d690f1e98e"
+      },
+      "source": [
+        "students_sheet1[quiz_columns]"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Quiz 1</th>\n",
+              "      <th>Quiz 2</th>\n",
+              "      <th>Quiz Average</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>90</td>\n",
+              "      <td>80</td>\n",
+              "      <td>85.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>100</td>\n",
+              "      <td>80</td>\n",
+              "      <td>90.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>85</td>\n",
+              "      <td>100</td>\n",
+              "      <td>92.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>90</td>\n",
+              "      <td>90</td>\n",
+              "      <td>90.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>80</td>\n",
+              "      <td>90</td>\n",
+              "      <td>85.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Quiz 1  Quiz 2  Quiz Average\n",
+              "ID                              \n",
+              "1       90      80          85.0\n",
+              "2      100      80          90.0\n",
+              "3       85     100          92.5\n",
+              "4       90      90          90.0\n",
+              "5       80      90          85.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "f_5tqCGM1Cs0"
       },
       "source": [
@@ -1660,6 +1780,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "COq7sl83lB-D"
+      },
+      "source": [
+        "**Keep the Result in a Variable**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1739,6 +1868,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W7WQlKLAlJ9w"
+      },
+      "source": [
+        "**Add the Result as a New Column to the Table**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "mr6Jwzesjx6b"
@@ -1750,82 +1888,12 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "HPEKGE-xua28"
+        "id": "Vw-ufv1bknfH"
       },
       "source": [
-        "# quiz_columns = []\n",
-        "\n",
-        "# for column in students_sheet1.columns:\n",
-        "#   if \"Quiz\" in column:\n",
-        "#     quiz_columns.append(column)\n",
-        "\n",
-        "quiz_columns = [column for column in students_sheet1.columns if \"Quiz\" in column]"
-      ],
-      "execution_count": 29,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RW44gSgPu7iX",
-        "outputId": "00d520e6-6a7c-4067-8fc5-7b441b3eed8d"
-      },
-      "source": [
-        "quiz_columns"
-      ],
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Quiz 1', 'Quiz 2', 'Quiz Average']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 30
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XNJZrDfau-vN",
-        "outputId": "7a8784f0-5dd2-4da1-d26b-ee3ede1b4662"
-      },
-      "source": [
-        "students_sheet1[quiz_columns[0]]"
-      ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "ID\n",
-              "1     90\n",
-              "2    100\n",
-              "3     85\n",
-              "4     90\n",
-              "5     80\n",
-              "Name: Quiz 1, dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
-        }
+        "**Convert a Column to Numpy Array**"
       ]
     },
     {
@@ -1871,9 +1939,15 @@
         "id": "6QPe5KURlbfd"
       },
       "source": [
-        "students_sheet1[\"Attendance Score\"] = 100*students_sheet1[\"Attendance\"] / students_sheet2[\"Number of Sessions\"].to_numpy()"
+        "students_sheet1[\"Attendance Score\"] = 100*students_sheet1[\"Attendance\"] / students_sheet2[\"Number of Sessions\"].to_numpy()\n",
+        "\n",
+        "# Alternative ways\n",
+        "# students_sheet1[\"Attendance Score\"] = 100*students_sheet1[\"Attendance\"] / students_sheet2.at[0, \"Number of Sessions\"] # Preferred Way\n",
+        "# students_sheet1[\"Attendance Score\"] = 100*students_sheet1[\"Attendance\"] / students_sheet2.iat[0, 0] # Preferred Way\n",
+        "# students_sheet1[\"Attendance Score\"] = 100*students_sheet1[\"Attendance\"] / students_sheet2.iloc[0, 0]\n",
+        "# students_sheet1[\"Attendance Score\"] = 100*students_sheet1[\"Attendance\"] / students_sheet2[\"Number of Sessions\"][0]"
       ],
-      "execution_count": 33,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -1884,12 +1958,12 @@
           "height": 235
         },
         "id": "NgsvAgalmbC1",
-        "outputId": "e6970cf2-1f34-43a7-cf15-9266d9cdcdb3"
+        "outputId": "268a34e0-db27-43a9-af8b-e902c9f99379"
       },
       "source": [
         "students_sheet1.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1920,9 +1994,11 @@
               "      <th>Attendance</th>\n",
               "      <th>Quiz Average</th>\n",
               "      <th>Attendance Score</th>\n",
+              "      <th>Final Score</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>ID</th>\n",
+              "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
@@ -1942,6 +2018,7 @@
               "      <td>5</td>\n",
               "      <td>85.0</td>\n",
               "      <td>100.0</td>\n",
+              "      <td>91.50</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1952,6 +2029,7 @@
               "      <td>4</td>\n",
               "      <td>90.0</td>\n",
               "      <td>80.0</td>\n",
+              "      <td>89.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1962,6 +2040,7 @@
               "      <td>3</td>\n",
               "      <td>92.5</td>\n",
               "      <td>60.0</td>\n",
+              "      <td>84.75</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1972,6 +2051,7 @@
               "      <td>4</td>\n",
               "      <td>90.0</td>\n",
               "      <td>80.0</td>\n",
+              "      <td>89.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
@@ -1982,27 +2062,28 @@
               "      <td>5</td>\n",
               "      <td>85.0</td>\n",
               "      <td>100.0</td>\n",
+              "      <td>91.50</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   First Name Last Name  Quiz 1  ...  Attendance  Quiz Average  Attendance Score\n",
-              "ID                               ...                                            \n",
-              "1      Amalia   Pearson      90  ...           5          85.0             100.0\n",
-              "2      Leyton  Richmond     100  ...           4          90.0              80.0\n",
-              "3     Phoenix   Stanton      85  ...           3          92.5              60.0\n",
-              "4      Hafsah    Cotton      90  ...           4          90.0              80.0\n",
-              "5        Cloe     Perez      80  ...           5          85.0             100.0\n",
+              "   First Name Last Name  Quiz 1  ...  Quiz Average  Attendance Score  Final Score\n",
+              "ID                               ...                                             \n",
+              "1      Amalia   Pearson      90  ...          85.0             100.0        91.50\n",
+              "2      Leyton  Richmond     100  ...          90.0              80.0        89.00\n",
+              "3     Phoenix   Stanton      85  ...          92.5              60.0        84.75\n",
+              "4      Hafsah    Cotton      90  ...          90.0              80.0        89.00\n",
+              "5        Cloe     Perez      80  ...          85.0             100.0        91.50\n",
               "\n",
-              "[5 rows x 7 columns]"
+              "[5 rows x 8 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 60
         }
       ]
     },
@@ -2012,10 +2093,10 @@
         "id": "RO5i7CktmDxn"
       },
       "source": [
-        "students_sheet1[\"Final Score\"] = ((students_sheet1[\"Attendance Score\"] * students_sheet2[\"Attendance Weight\"].values)\n",
-        "                                 +(students_sheet1[\"Quiz Average\"] * students_sheet2[\"Quiz Weight\"].values))"
+        "students_sheet1[\"Final Score\"] = ((students_sheet1[\"Attendance Score\"] * students_sheet2.at[0, \"Attendance Weight\"])\n",
+        "                                 +(students_sheet1[\"Quiz Average\"] * students_sheet2.at[0, \"Quiz Weight\"]))"
       ],
-      "execution_count": 35,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -2026,12 +2107,12 @@
           "height": 235
         },
         "id": "zf8dyv6Lmuj5",
-        "outputId": "d730dd80-ca27-4685-d33e-23d635c57d5c"
+        "outputId": "222e449c-e5ed-41c7-d6ba-d40ec1057771"
       },
       "source": [
         "students_sheet1.head()"
       ],
-      "execution_count": 36,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2151,7 +2232,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 62
         }
       ]
     },
