--- a/Working_with_Spreadsheets.ipynb
+++ b/Working_with_Spreadsheets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMcpgdYUJeNudXwrbmqWat+",
+      "authorship_tag": "ABX9TyONzHY2pXwNyGCRfffhg3em",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1340,6 +1340,62 @@
             "tags": []
           },
           "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NmMAkxdgn8M4",
+        "outputId": "06c24e66-a1fe-49ff-ed0b-fc04bf234234"
+      },
+      "source": [
+        "students_sheet1.loc[1, \"Quiz 1\"]"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "90"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xDQsi5Ihn_U-",
+        "outputId": "6704e5ed-33b0-42b1-f92d-cd18905e7b71"
+      },
+      "source": [
+        "students_sheet1.iloc[0, 2]"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "90"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
         }
       ]
     },
