--- a/Working_with_Spreadsheets.ipynb
+++ b/Working_with_Spreadsheets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPRTlKnR8R1zqRJE/FgkwFq",
+      "authorship_tag": "ABX9TyNURNQgak3pzQ/YPQ6KPf3U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -521,7 +521,7 @@
         "id": "ckRI_l23h5Ob"
       },
       "source": [
-        "**Slicing Row**"
+        "**Slicing Rows**"
       ]
     },
     {
