--- a/Web_Crawling.ipynb
+++ b/Web_Crawling.ipynb
@@ -6,7 +6,7 @@
       "name": "Web Crawling",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMy2BoEa0SJ3cu6/9nUTV+n",
+      "authorship_tag": "ABX9TyN2C9nWANByLGEaCt1R/iP+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -666,7 +666,7 @@
         "id": "uWAAlzf0P4Xk"
       },
       "source": [
-        "Combining links and labels"
+        "Combine links and labels using zip (for more information see: https://docs.python.org/3/library/functions.html#zip)"
       ]
     },
     {
@@ -769,7 +769,7 @@
       "source": [
         "Some images have a full URL but many don't.\n",
         "\n",
-        "We can fix this problem."
+        "We can fix this problem using the `urljoin` method from `requests.compat`."
       ]
     },
     {
@@ -778,13 +778,11 @@
         "id": "HnlrkVt5nyYa"
       },
       "source": [
-        "from urllib.parse import  urljoin\n",
-        "\n",
         "BASE_URL = \"https://www.marquette.edu\"\n",
         "\n",
-        "fixed_image_urls = [urljoin(BASE_URL, image_url) for image_url in image_urls]"
+        "fixed_image_urls = [requests.compat.urljoin(BASE_URL, image_url) for image_url in image_urls]"
       ],
-      "execution_count": 46,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -804,7 +802,7 @@
         "id": "DD9d0lvIsa_Q"
       },
       "source": [
-        "## How can we leverage alt text of the images as possible labels for machine learning "
+        "## How can we leverage alt text of the images as possible labels for supervised machine learning "
       ]
     },
     {
@@ -1082,6 +1080,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vrxR7lvthzAw"
+      },
+      "source": [
+        "Create a directory for images."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "FI8dmVQZwmrV"
@@ -1092,6 +1099,17 @@
       ],
       "execution_count": 53,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KZHjWjZAh287"
+      },
+      "source": [
+        "Go through image urls and download them one by one.\n",
+        "\n",
+        "Use a unique id starting from 0 as file name to avoid duplicate names."
+      ]
     },
     {
       "cell_type": "code",
@@ -1138,15 +1156,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_VttciQYiXIi"
+      },
+      "source": [
+        "It is possible to use some tensorflow tools to directly load all images.\n",
+        "\n",
+        "But here we see how to do this manually to have more control over the process and preprocess the images the way we want"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "g_HoG8j31p0m"
       },
       "source": [
-        "# It is possible to use some tensorflow tools to directly load all images\n",
-        "# But here we see how to do this manually to have more control over the process\n",
-        "# and preprocess the images the way we want\n",
-        "\n",
         "image_names = []\n",
         "images_list = []\n",
         "# We use the following nested loops to get all files inside a directory, one by one\n",
@@ -1194,18 +1219,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "tH9wpcRB6CpW"
+        "id": "rNp2E4n3igW5"
       },
       "source": [
-        "try:\n",
-        "  del(inception_model)\n",
-        "except:\n",
-        "  pass"
-      ],
-      "execution_count": 58,
-      "outputs": []
+        "We load the Inception V3 model from TensorFlow Hub. We add a Softmax layer to the end of the model to make sure the model gives us probabilities instead of meaningless numbers (logits)."
+      ]
     },
     {
       "cell_type": "code",
@@ -1223,6 +1243,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yW4zMbSsi2_W"
+      },
+      "source": [
+        "We can pass all image arrays direcly to the model and get all predications at once."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "80xM6D_q7JOi"
@@ -1232,6 +1261,15 @@
       ],
       "execution_count": 60,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j4zZiHgFi_ax"
+      },
+      "source": [
+        "The model gives is 25 predictions:"
+      ]
     },
     {
       "cell_type": "code",
@@ -1262,6 +1300,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P1AXUrE-jGyh"
+      },
+      "source": [
+        "To make sense of these predications, we need to have the class names:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-x9d7tAZ7lLe"
@@ -1278,7 +1325,7 @@
         "id": "GnkB2DrZFP5I"
       },
       "source": [
-        "Check how well the model performed"
+        "Now, we can check how well the model performed"
       ]
     },
     {
@@ -1303,6 +1350,7 @@
         "outputId": "26bafb07-3770-415e-8811-66b98b61d2d2"
       },
       "source": [
+        "# Show an image from the image_arrays\n",
         "tf.keras.preprocessing.image.array_to_img(image_arrays[num])"
       ],
       "execution_count": 64,
