--- a/Working_with_Spreadsheets.ipynb
+++ b/Working_with_Spreadsheets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNURNQgak3pzQ/YPQ6KPf3U",
+      "authorship_tag": "ABX9TyMecIpiXaUJqVktrnjS0nHV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,21 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/saffarizadeh/INSY4054/blob/main/Working_with_Spreadsheets.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VpsNsfaw8YoY"
+      },
+      "source": [
+        "<img src=\"http://saffarizadeh.com/Logo.png\" width=\"300px\"/>\n",
+        "\n",
+        "# *INSY 4054: Emerging Technologies*\n",
+        "\n",
+        "# **Working with Spreadsheets**\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -52,7 +67,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +78,7 @@
       "source": [
         "excel_file_address = 'http://saffarizadeh.com/ET/Students.xlsx'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +89,7 @@
       "source": [
         "students_sheet1 = pd.read_excel(excel_file_address, sheet_name=0, index_col=0)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +114,7 @@
       "source": [
         "students_sheet1.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -208,7 +223,7 @@
       "source": [
         "students_sheet2 = pd.read_excel(excel_file_address, sheet_name=1)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +239,7 @@
       "source": [
         "students_sheet2.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +299,7 @@
       "source": [
         "students_sheet3 = pd.read_excel(excel_file_address, sheet_name=2, index_col=0)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +315,7 @@
       "source": [
         "students_sheet3.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +410,7 @@
       "source": [
         "students_sheet1.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +552,7 @@
       "source": [
         "students_sheet1[0:2]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +639,7 @@
       "source": [
         "students_sheet1.loc[1:2]"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,7 +726,7 @@
       "source": [
         "students_sheet1.iloc[0:2]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -806,7 +821,7 @@
       "source": [
         "students_sheet1[\"Quiz 1\"]"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -841,7 +856,7 @@
       "source": [
         "students_sheet1.iloc[:, 1:4]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -941,7 +956,7 @@
       "source": [
         "students_sheet1.loc[:, \"Last Name\": \"Quiz 2\"]"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1040,7 +1055,7 @@
       "source": [
         "students_sheet1.columns"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1069,7 +1084,7 @@
       "source": [
         "students_sheet1[students_sheet1.columns[1:4]]"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1173,7 +1188,7 @@
       "source": [
         "quiz_columns = [column for column in students_sheet1.columns if \"Quiz\" in column]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1189,7 +1204,7 @@
       "source": [
         "students_sheet1[quiz_columns]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1292,7 +1307,7 @@
       "source": [
         "students_sheet1[\"Quiz 1\"][1]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1320,7 +1335,7 @@
       "source": [
         "students_sheet1[\"Quiz 1\"].iloc[0]"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1348,7 +1363,7 @@
       "source": [
         "students_sheet1.loc[1, \"Quiz 1\"]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1376,7 +1391,7 @@
       "source": [
         "students_sheet1.iloc[0, 2]"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1413,7 +1428,7 @@
       "source": [
         "students_sheet1.at[1, \"Quiz 1\"]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1441,7 +1456,7 @@
       "source": [
         "students_sheet1.iat[0, 2]"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1479,7 +1494,7 @@
       "source": [
         "students_sheet1[students_sheet1[\"Quiz 1\"] >= 90]"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1574,7 +1589,7 @@
       "source": [
         "students_sheet1[\"Quiz 1\"].mean()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1603,7 +1618,7 @@
       "source": [
         "students_sheet1[students_sheet1[\"Quiz 1\"] >= students_sheet1[\"Quiz 1\"].mean()]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1698,7 +1713,7 @@
       "source": [
         "students_sheet1[\"Quiz 2\"].mean()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1727,7 +1742,7 @@
       "source": [
         "students_sheet1[(students_sheet1[\"Quiz 1\"] >= students_sheet1[\"Quiz 1\"].mean()) | (students_sheet1[\"Quiz 2\"] >= students_sheet1[\"Quiz 2\"].mean())]"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1851,7 +1866,7 @@
         "both_quizzes_above_average = students_sheet1[(students_sheet1[\"Quiz 1\"] >= students_sheet1[\"Quiz 1\"].mean()) & (students_sheet1[\"Quiz 2\"] >= students_sheet1[\"Quiz 2\"].mean())]\n",
         "both_quizzes_above_average"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1933,7 +1948,7 @@
       "source": [
         "students_sheet1[\"Quiz Average\"] = (students_sheet1[\"Quiz 1\"] + students_sheet1[\"Quiz 2\"])/2"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1959,7 +1974,7 @@
         "students_sheet1[\"Email\"] = students_sheet3[\"Email\"]\n",
         "students_sheet1"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2104,7 +2119,7 @@
       "source": [
         "students_sheet2[\"Number of Sessions\"].to_numpy()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2134,7 +2149,7 @@
         "# students_sheet1[\"Attendance Score\"] = 100*students_sheet1[\"Attendance\"] / students_sheet2.iloc[0, 0]\n",
         "# students_sheet1[\"Attendance Score\"] = 100*students_sheet1[\"Attendance\"] / students_sheet2[\"Number of Sessions\"][0]"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2150,7 +2165,7 @@
       "source": [
         "students_sheet1.head()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2283,7 +2298,7 @@
         "students_sheet1[\"Final Score\"] = ((students_sheet1[\"Attendance Score\"] * students_sheet2.at[0, \"Attendance Weight\"])\n",
         "                                 +(students_sheet1[\"Quiz Average\"] * students_sheet2.at[0, \"Quiz Weight\"]))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2299,7 +2314,7 @@
       "source": [
         "students_sheet1.head()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2448,7 +2463,7 @@
       "source": [
         "students_sheet1[\"xyz\"] = 0"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2464,7 +2479,7 @@
       "source": [
         "students_sheet1"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2610,7 +2625,7 @@
       "source": [
         "students_sheet1 = students_sheet1.drop(columns=[\"xyz\"])"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2626,7 +2641,7 @@
       "source": [
         "students_sheet1"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2791,7 +2806,7 @@
         "  students_sheet1.at[index, \"Final Score\"] = row['Final Score'] + 2\n",
         "  # students_sheet1[\"Final Score\"][index] = row['Final Score'] + 2"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2819,7 +2834,7 @@
       "source": [
         "students_sheet1.head()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2974,7 +2989,7 @@
         "students_sheet1_by_quiz1 = students_sheet1.sort_values(['Final Score'], ascending=False)\n",
         "students_sheet1_by_quiz1.head()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3124,7 +3139,7 @@
       "source": [
         "students_sheet1.to_excel('output.xlsx', sheet_name='grades', index=True)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3137,7 +3152,7 @@
         "  students_sheet1.to_excel(writer, sheet_name='grades', index=True)\n",
         "  both_quizzes_above_average.to_excel(writer, sheet_name='both quizzes above avg', index=True)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     }
   ]
